Add a test to check consumptoin for byte
byte should not consume more chars if it is successful, add a test to ensure this.

--- a/emu-mos6502-asm-blog.cabal
+++ b/emu-mos6502-asm-blog.cabal
@@ -45,6 +45,7 @@ test-suite assembler-suite
     , hspec
     , hspec-megaparsec >= 0.3.1 && < 0.4.0
     , megaparsec
+    , quickcheck-instances
     , tasty
     , tasty-hunit
     , tasty-hspec
