--- a/emu-mos6502-asm-blog.cabal
+++ b/emu-mos6502-asm-blog.cabal
@@ -42,15 +42,14 @@ test-suite assembler-suite
     Main.hs
   build-depends:
     base
-    , hspec
+    , hspec >= 2.4.2 && < 2.5.0
     , hspec-megaparsec >= 0.3.1 && < 0.4.0
     , megaparsec
-    , quickcheck-instances
-    , tasty
-    , tasty-hunit
-    , tasty-hspec
-    , tasty-smallcheck
-    , tasty-quickcheck
+    , QuickCheck >= 2.9.2 && < 3.0.0
+    , quickcheck-instances >= 0.3.12 && < 0.4.0
+    , tasty >= 0.11.2 && < 0.12.0
+    , tasty-hspec >= 1.1.3.1 && < 1.2.0.0
+    , tasty-quickcheck >= 0.8.4 && < 0.9.0
     , text
     , emu-mos6502-asm-blog
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
